<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/common_info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/edit_guest_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_guest_city"
                style="@style/EditorFieldStyle"
                android:hint="@string/city"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/gender" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/age" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <EditText
                android:id="@+id/edit_guest_age"
                style="@style/EditorFieldStyle"
                android:hint="@string/age"
                android:inputType="number"
                tools:ignore="Autofill" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>